deployment-scripts/production/reelcruit-candidate-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelcruit-backend
  namespace: production
  labels:
    app: reelcruit-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reelcruit-backend 
  template:
    metadata:
      labels:
        app: reelcruit-backend
    spec:
      containers:
        - name: reelcruit
          image: reelcruitapp/reelcruitapi:test
          ports:
            - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: reelcruit-backend-svc
  namespace: production
spec:
  type: NodePort
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  selector:
    app: reelcruit-backend
