deployment-scripts/production/reelcruit-candidate-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: candidate-be-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.reelcruit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reelcruit-backend-svc
              port:
                number: 5001

    - host: www.api.reelcruit.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: reelcruit-backend-svc
              port:
                number: 5001
